--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
   "imports": {
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react": "https://esm.sh/react@^19.2.3",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body class="bg-slate-900 text-slate-100 antialiased">
     <div id="root"></div>
+    <!-- Script ini wajib ada agar Vite tahu di mana entry point aplikasi Anda -->
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
